Create style.css and organize folder structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
             <label for="email">E-mail</label>
             <input type="email" placeholder="Digite seu e-mail" name="email" required/>
             <label for="comment">Mensagem</label>
-            <textarea placeholder="Digite sua senha" name="comment"required></textarea>
+            <textarea placeholder="Digite sua mensagem" name="comment"required></textarea>
 
             <div class="g-recaptcha" data-sitekey="6Lejt1wqAAAAAF9fnkr8pOjVxuOG-yRv7qKBdoWX"></div>
 
