Creat and configure routes.py

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="page">
-        <form action="" method="POST" class="formemail">
+        <form action="/ticket" method="POST" class="formemail">
             <div class="campoemail">
                 <h1>Formulário para Contato</h1>
             </div>
