Bug fixes in valaidators.py and frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="page">
-        <form id="contact-form" class="formemail" onsubmit="teste(event)">
+        <form id="contact-form" class="formemail" onsubmit="sendForm(event)">
             <div class="campoemail">
                 <h1>Formulário para Contato</h1>
             </div>
@@ -30,7 +30,7 @@
             <div id="error-message" style="color: rgb(168, 0, 0); display: none;"></div>
             <div id="success-message" style="color: rgb(9, 202, 9); display: none;"></div>
 
-            <button type="submit" id="Enviar">Easfsaviar</button>
+            <button type="submit" id="Enviar">Enviar</button>
         </form>
     </div>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
