Fixed error messages in front end

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
 
             <div class="g-recaptcha" data-sitekey="6Lejt1wqAAAAAF9fnkr8pOjVxuOG-yRv7qKBdoWX"></div>
 
-            <div id="error-message" style="color: rgb(168, 0, 0); display: none;"></div>
+            <div id="errorM" style="color: rgb(168, 0, 0); display: none;"></div>
             <div id="success-message" style="color: rgb(9, 202, 9); display: none;"></div>
 
             <input type="submit" value="Enviar" id="Enviar" class="btn" />
